Allow going up to 150% for output volume

And mark the base volume in the slider.

https://bugzilla.gnome.org/show_bug.cgi?id=591285
https://bugzilla.redhat.com/show_bug.cgi?id=520148